# rivet

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md
.github/workflows/: pkg-pr-new.yaml
docker/dev/: docker-compose.yml
docker/dev-host/: docker-compose.yml
docker/dev-host/rivet-engine/: config.jsonc
docker/dev-multidc/: docker-compose.yml
docker/dev-multidc-multinode/: docker-compose.yml
docker/dev-multinode/: docker-compose.yml
docker/dev/rivet-engine/: config.jsonc
docker/template/src/: docker-compose.ts
frontend/: package.json
frontend/src/: app.tsx  index.css  routeTree.gen.ts
frontend/src/app/: actor-builds-list.tsx  context-switcher.tsx  help-dropdown.tsx  layout.tsx  login.tsx  route-error.tsx  runners-table.tsx  sign-up.tsx  use-dialog.tsx  user-dropdown.tsx
frontend/src/components/: code.tsx  copy-area.tsx  fullscreen-loading.tsx  modal-renderer.tsx  steps.tsx  theme.css
frontend/src/lib/: auth.ts  env.ts  waitForClerk.ts
frontend/src/queries/: actor-inspector.ts  global.ts  manager-engine.ts  manager-inspector.ts  utils.ts
frontend/src/routes/: __root.tsx  _context.tsx  _layout.tsx  join.tsx  (+3 more)
scripts/docker/: build-push-test.sh  build-push.sh
scripts/release/: sdk.ts
scripts/tests/: actor_e2e.ts  actor_stress.ts  utils.ts
sdks/rust/data/: Cargo.toml  build.rs
sdks/rust/data/src/: versioned.rs
sdks/rust/ups-protocol/: Cargo.toml  build.rs
sdks/rust/ups-protocol/src/: versioned.rs
site/public/: llms-full.txt  llms.txt
(+166 files in other folders)
