[package]
name = "rivet-data"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gas.workspace = true
rivet-runner-protocol.workspace = true
rivet-util.workspace = true
serde_bare.workspace = true
serde.workspace = true
vbare.workspace = true

[build-dependencies]
vbare-compiler.workspace = true
