[package]
name = "rivet-ups-protocol"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
rivet-util.workspace = true
serde_bare.workspace = true
serde.workspace = true
vbare.workspace = true

[build-dependencies]
vbare-compiler.workspace = true
